# mirabel

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  README_old.md
cmake/: generate_git_commit_hash.cmake.in
docs/: design.md
includes/mirabel/: config.h  engine.h  engine_plugin.h  engine_wrap.h  engine_wrap_plugin.h  event.h  event_queue.h  frontend.h  frontend_plugin.h  game.h  game_decldef.h  game_plugin.h  game_wrap.h  game_wrap_plugin.h  imgui_c_thin.h  job_queue.h  log.h  move_history.h  sound.h
lib/stb/: .gitignore
lib/surena/: surena_game.hpp
lib/surena/games/: surena_tictactoe.cpp  surena_tictactoe.hpp
lib/surena/util/: surena_fast_prng.cpp  surena_fast_prng.hpp
plugins/: .gitignore
plugins/mgp_example/: Findmirabel.cmake  example_game_backend.md  test_plugin.cpp
src/: main.cpp
src/control/: auth_manager.cpp  auth_manager.hpp  client.cpp  client.hpp  config.cpp  event.c  event.cpp  event.h  event.hpp  event_base.hpp  event_queue.cpp  event_queue.h  event_queue.hpp  guithread.cpp  guithread.hpp  job_queue.cpp  lobby.cpp  lobby.hpp  lobby_manager.cpp  lobby_manager.hpp  move_history.cpp  plugins.cpp  plugins.hpp  server.cpp  server.hpp  timeout_crash.cpp  timeout_crash.hpp  user_manager.cpp  user_manager.hpp
src/engines/: builtin_surena.cpp  builtin_surena.hpp  engine.cpp  engine_catalogue.cpp  engine_catalogue.hpp  engine_manager.cpp  engine_manager.hpp
src/frontends/: chess.cpp  chess.hpp  empty_frontend.cpp  empty_frontend.hpp  fallback_text.cpp  fallback_text.hpp  frontend.hpp  frontend_catalogue.cpp  frontend_catalogue.hpp  havannah.cpp  havannah.hpp  quasar.cpp  rockpaperscissors.cpp  tictactoe.cpp  tictactoe.hpp  tictactoe_ultimate.cpp  tictactoe_ultimate.hpp  twixt_pp.cpp  twixt_pp.hpp
src/games/: chess.cpp  chess.hpp  default_ctx.cpp  default_ctx.hpp  game.c  game_catalogue.cpp  game_catalogue.hpp  havannah.cpp  havannah.hpp  move_history.c  tictactoe.cpp  tictactoe.hpp  tictactoe_ultimate.cpp  tictactoe_ultimate.hpp  twixt_pp.cpp  twixt_pp.hpp
src/meta_gui/: about.cpp  chat.cpp  config.cpp  confirm_exit.cpp  connection.cpp  engine.cpp  frontend_config.cpp  game_config.cpp  gamestate_config.cpp  global_dockspace.cpp  guistate_config.cpp  history.cpp  lobby.cpp  logs.cpp  main_menu.cpp  meta_gui.cpp  meta_gui.hpp  plugins.cpp  stats.cpp  timectl.cpp
src/network/: network_adapter.hpp  network_client.cpp  network_client.hpp  network_server.cpp  network_server.hpp  protocol.cpp  protocol.hpp  util.cpp  util.hpp
src/prototype_util/: direct_draw.cpp  direct_draw.hpp  imgui_c_thin.cpp  log.cpp  sane_windows.h  st_gui.cpp  st_gui.hpp
src/repl/: repl.c  repl.h
src/rosa_impl/: base64.c  json.c  noise.c  rand.c  semver.c  serialization.c  timestamp.c  vector.c
src/state_control/: client.cpp  client.hpp  controller.cpp  controller.hpp  drawing_context_app.hpp  enginethread.cpp  enginethread.hpp  event.cpp  event.hpp  event_queue.cpp  event_queue.hpp  guithread.cpp  guithread.hpp  server.cpp  server.hpp  timeout_crash.cpp  timeout_crash.hpp
src/util/: instanceof.hpp
